# solana-c

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  perf.all.data  perf.data.old  perf.replay.data  perf.replay.data.old  perf.replay2.data  spec.md  validator.local.toml
artifacts/: LARGE_ARTIFACTS.txt
bench/: CMakeLists.txt  bench_accounts.c  bench_common.h  bench_ed25519.c  bench_entry_verify.c  bench_poh.c  bench_shred.c
bench_mix_oldstate/: accounts  run.long1.stderr  run.patch2bpf.stderr  run.prebreak.stderr  run.prebreak2.stderr  run.prebreak3.stderr  run.prebreak4.stderr  run.prewarm.stderr  run.prewarm128.stderr  run.prewarm128b.stderr  run.stage.stderr  run.stage2.stderr  run.timing.stderr  run.timing613.stderr  run.verifyasync.stderr  snapshot-archives
bench_mix_oldstate/rocksdb/: accounts  blockstore
cmake/: CompilerFlags.cmake  Dependencies.cmake  Testing.cmake
config/: mainnet.toml  prometheus.yml  testnet.toml  validator.toml.example
docs/: deployment.md
fixtures/: README.md
fuzz/: CMakeLists.txt  fuzz_blockstore_insert.c  fuzz_compute_budget_parse.c  fuzz_config_parse.c  fuzz_entry_batch_parse.c  fuzz_gossip_msg_decode.c  fuzz_json_parser.c  fuzz_pubkey_base58.c  fuzz_rpc_handle_request_json.c  fuzz_shred_parse.c  fuzz_signature_base58.c  fuzz_snapshot_filename_parse.c  fuzz_snapshot_service_manifest_json.c  fuzz_transaction_decode.c
scripts/: analyze_vote_dumps.py  build-quiche.sh  check_closed_accounts.py  compare-bank-frozen.sh  compare_accounts.py  compare_accounts2.py  compare_accounts3.py  compare_accounts4.py  compare_agave_accounts.py  compare_agave_parent_accounts.py  compare_agave_post_execution.py  compare_delta_agave.py  compare_delta_agave2.py  compare_tx_results.py  compare_tx_results2.py  decode_vote_account.py  download-fixtures.sh  fetch_fixtures.sh  find_divergent_txs.py  health-check.sh  install-deps.sh  install-mainnet-rpc-voting-service.sh  mainnet-rpc-voting.env.example  read_appendvec.py  replay-latency-percentiles.py  rpc-smoke-jsonrpc.sh  run-dos-smoke.sh  run-fuzz-smoke.sh  run-mainnet-canary-gate.sh  run-mainnet-rpc-voting.sh  run-mainnet-smoke.sh  run-mainnet.sh  run-perf.sh  run-replay-phase-gate.sh  run-sanitizers.sh  run-static-analysis.sh  run-sync-soak.sh  setup-validator.sh  solana-validator-rpc-voting.service  solana-validator.service  (+5 more)
src/blockstore/: sol_blockstore.c  sol_blockstore.h
src/bpf/: fd_bn254_compat.h  sol_bpf.h  sol_bpf_cpi.c  sol_bpf_elf.c  sol_bpf_jit.c  sol_bpf_syscall.c  sol_bpf_vm.c
src/conformance/: sol_compat.c  sol_compat.h  sol_pb.h
src/consensus/: sol_tower.c  sol_tower.h  sol_vote_tracker.c  sol_vote_tracker.h  sol_vote_tx.c  sol_vote_tx.h
src/crypto/: sol_blake3.c  sol_blake3.h  sol_ed25519.c  sol_ed25519.h  sol_keccak256.c  sol_keccak256.h  sol_lt_hash.c  sol_lt_hash.h  sol_secp256k1.c  sol_secp256k1.h  sol_sha256.c  sol_sha256.h  sol_sha512.c  sol_sha512.h
src/entry/: sol_entry.c  sol_entry.h
src/gossip/: sol_crds.c  sol_crds.h  sol_crds_value.h  sol_gossip.c  sol_gossip.h  sol_gossip_msg.c  sol_gossip_msg.h
src/metrics/: sol_prometheus.c  sol_prometheus.h
src/net/: sol_net.h  sol_quic.c  sol_quic.h  sol_udp.c  sol_udp.h
src/poh/: sol_block_producer.c  sol_block_producer.h  sol_poh.c  sol_poh.h
src/programs/: sol_address_lookup_table_program.c  sol_address_lookup_table_program.h  sol_bpf_loader_program.c  sol_bpf_loader_program.h  sol_config_program.c  sol_config_program.h  sol_ed25519_program.c  sol_ed25519_program.h  sol_secp256k1_program.c  sol_secp256k1_program.h  sol_secp256r1_program.c  sol_secp256r1_program.h  sol_stake_program.c  sol_stake_program.h  sol_system_program.c  sol_system_program.h  sol_token_program.c  sol_token_program.h  sol_vote_program.c  sol_vote_program.h
src/repair/: sol_repair.c  sol_repair.h
src/replay/: sol_bank_forks.c  sol_bank_forks.h  sol_fork_choice.c  sol_fork_choice.h  sol_replay.c  sol_replay.h
src/rpc/: sol_health.c  sol_health.h  sol_rpc.c  sol_rpc.h
src/runtime/: sol_account.c  sol_account.h  sol_accounts_db.c  sol_accounts_db.h  sol_accounts_hash.c  sol_accounts_hash.h  sol_appendvec_index.c  sol_appendvec_index.h  sol_bank.c  sol_bank.h  sol_compute_budget.c  sol_compute_budget.h  sol_leader_schedule.c  sol_leader_schedule.h  sol_program.c  sol_program.h  sol_rewards.c  sol_rewards.h  sol_sysvar.c  sol_sysvar.h
src/shred/: sol_shred.c  sol_shred.h
src/snapshot/: sol_snapshot.c  sol_snapshot.h  sol_snapshot_archive.c  sol_snapshot_archive.h  sol_snapshot_download.c  sol_snapshot_download.h
src/storage/: sol_rocksdb.c  sol_rocksdb.h  sol_storage_backend.c  sol_storage_backend.h
src/tools/: sol_accounts_index_tool.c  sol_dump_account_tool.c  sol_dump_sysvar_tool.c  sol_entry_hash_tool.c  sol_keygen.c  sol_slot_replay_tool.c  sol_snapshot_fetch_tool.c  sol_tx_decode_tool.c  sol_verify_vote_state_tool.c  sol_vote_tool.c
src/tpu/: sol_banking_stage.c  sol_banking_stage.h  sol_sigverify.c  sol_sigverify.h  sol_tpu.c  sol_tpu.h
src/turbine/: sol_turbine.c  sol_turbine.h
src/tvu/: sol_tvu.c  sol_tvu.h
src/txn/: sol_bincode.h  sol_instruction.h  sol_message.c  sol_message.h  sol_pubkey.c  sol_pubkey.h  sol_signature.c  (+3 more)
tests/: CMakeLists.txt  test_framework.h
tests/conformance/: conformance.c  conformance.h  test_conformance.c  test_rpc_conformance.c
tests/conformance/fixtures/: README.md
tests/conformance/fixtures/blockstore/: assemble_simple.input  assemble_simple.output
tests/unit/: test_block_production.c  test_blockstore.c  test_bpf.c  test_config.c  test_consensus.c  test_crypto.c  test_entry.c  test_fork_choice.c  test_gossip.c  test_net.c  test_poh.c  test_programs.c  test_repair.c  test_replay.c  test_rpc.c  test_runtime.c  test_shred.c  test_snapshot.c  test_sysvar.c  test_tpu.c  test_turbine.c  test_tvu.c  test_txn.c  test_util.c  test_vote_tracker.c
tools/: compare_block_vs_delta.py  compare_delta_dumps.py  dump_appendvec.c  find_closed_accounts.py  find_divergent_account.py  read_tx_status.c  verify_all_lthash.py  verify_lt_hash.c  verify_lthash.py
(+32 files in other folders)
